--- a/acuteCare.html
+++ b/acuteCare.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <div class="leftSection">
-            <a href="index.html">CClinic</a>
+            <a href="home.html">CClinic</a>
         </div>
         <div class="rightSection">
             <a href="contact_us.html">Contact Us</a>
