--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
 <body>
   <div class="header">
     <div class="leftSection">
-        <a href="index.html">CClinic</a>
+        <a href="home.html">CClinic</a>
     </div>
     <div class="rightSection">
         <a href="contact_us.html">Contact Us</a>
@@ -186,7 +186,7 @@
         document.getElementById("message").style.color = "beige";
   
         sessionStorage.setItem('username', data.username);
-        window.location.href = "index.html";
+        window.location.href = "home.html";
       } else {
         document.getElementById("message").textContent = "Login failed. Please check your credentials.";
         document.getElementById("message").style.backgroundColor = "red";
